[package]
name = "gpuload"
version = "0.1.0"
authors = ["Ghislain PUTOIS <ghislain.putois@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = ""
nvml-wrapper = ""
procinfo = ""

[build-dependencies]
vergen = "3"

[profile.release]
opt-level = 'z'
lto = true
