[package]
name = "gpuload"
version = "0.1.0"
authors = ["Ghislain PUTOIS <ghislain.putois@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
subprocess = ""
nvml-wrapper = ""
procinfo = ""
ctrlc = ""
libc = ""

[build-dependencies]
vergen = "3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
